adding transactions swagger
